# ChatMemory

./: .gitignore  README.md  pyproject.toml
Skills/: README.md
Skills/agents/: README.md
Skills/chatarch/chatarch-lark-cli-permission-authorization/: SKILL.md
Skills/chatarch/chatarch-org-pr-status/: SKILL.md
Skills/chatarch/chatenv-provider-workflow/: SKILL.md
Skills/chatarch/chatgh-pr-and-ci-workflow/: SKILL.md
Skills/chatarch/chatgh-repo-token-setup/: SKILL.md
Skills/chatarch/chatnet-ecnu-default-visitor/: SKILL.md
Skills/chatarch/chattool-capability-extraction/: SKILL.md
Skills/chatarch/module-archive-hardening/: SKILL.md
Skills/chatarch/package-development/: README.md
Skills/chatarch/package-review/: README.md
Skills/chatarch/public-repo-and-default-branch-protection/: SKILL.md
Skills/chatarch/python-package-release-with-chattool-pypi/: SKILL.md
Skills/common/feishu-collaboration-documents/: SKILL.md
Skills/common/hermes-environment-notes/: SKILL.md
Skills/common/hermes-lark-cli-binding/: SKILL.md
Skills/common/hermes-slash-command-development/: SKILL.md
Skills/common/hermes-ssh-target-configuration/: SKILL.md
Skills/common/hermes-terminal-env-profile/: SKILL.md
Skills/common/lark-cli-permission-authorization/: SKILL.md
Skills/common/workspace-maintenance/: SKILL.md
Skills/hermes-slash-command-development/: SKILL.md
Skills/local/: README.md
Skills/local/chatmemory-local-branch-loop/: SKILL.md
Skills/local/feishu-collaboration-local-conventions/: SKILL.md
src/chatmemory/: __init__.py
tests/: test_version.py
(+23 files in other folders)
