[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ChatMemory"
dynamic = ["version"]
description = "Private ChatArch workspace memory plugin for shared knowledge and skills"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["chatmemory"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
version = {attr = "chatmemory.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true
